# Flor

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  PresentaciónCanva.txt  README.md  docker-compose.yml  mini_reto-escala.md  pqrs.db  railway.toml  valorEn3Frases.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/migrations/: 001_create_users.sql
backend/scratch/: test_login.py  test_me.py  test_remote_login.py
backend/scripts/: clear_s3.py  reprocess_curated.py  seed.py  seed_admin.py  seed_curated_pqrsds.py  seed_curated_v2.py  seed_departments.py  seed_raw_pqrsds.py  seed_users.py  test_yolo.py
backend/src/application/dtos/: auth_dtos.py  chatbot_dtos.py  ingest_curated_dtos.py  ingest_dtos.py  pqrs_dtos.py  pqrsd_assist_dtos.py
backend/src/application/use_cases/: analyze_map_density.py  cluster_pqrs.py  draft_intelligent_response.py  draft_response_pqrsd.py  ingest_curated_messages.py  ingest_email_pqrs.py  ingest_knowledge_base_document.py  ingest_raw_messages.py  login_user.py  migrate_raw_to_curated.py  process_pqrs.py  query_flor_chatbot.py  register_user.py  summarize_pqrsd.py
backend/src/domain/entities/: __init__.py  department.py  knowledge_base_entry.py  pqrs_analysis.py  user.py
backend/src/domain/ports/: __init__.py  classification_port.py  curated_data_lake.py  department_repository_port.py  department_router_port.py  document_ingestion_port.py  (+11 more)
backend/src/infrastructure/: container.py
backend/tests/: test_meta_ingest.py  test_sync_mock.py
backend/tests/integration/: test_chatbot_endpoint.py
(+113 files in other folders)
